--- a/src/modules/users/views/confirm_email.hbs
+++ b/src/modules/users/views/confirm_email.hbs
@@ -11,10 +11,10 @@
 <div class="message-content">
   <p>Olá {{name}}!</p>
   <br>
-  <p>Recebemos uma solicitação de redefinição de senha para sua conta de usuário.</p>
+  <p>Recebemos uma solicitação de confirmação de email para sua conta de usuário.</p>
   <p>Se realmente foi você que solicitou, clique no link abaixo para escolher uma nova senha:</p>
   <p>
-    <a href="{{link}}">Redefinir senha</a>
+    <a href="{{link}}">Confirmar Email</a>
   </p>
   <p>Caso você não tenha realizado esta solicitação, ignore este email.</p>
   <br>
